import consoleMenu.Console;

import java.io.IOException;

/**
 * Created by iyasuwatts on 10/17/17.
 * :)
 */
public class Main {

    public static void main(String[] args) throws IOException {
        Console console = new Console();
        console.welcome();
    }
}