package account;

public class Investment extends Account {

    public Investment(String accountId, Double balance ,String accountType) {
        super(accountId, balance ,accountType);
    }

}
