package account;

public class Savings extends Account {

    public Savings(String accountId, Double balance,String accountType) {
        super(accountId, balance,accountType);
    }

}
